infra/k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ahmedelbaz
  labels:
    app: ahmedelbaz
    environment: production
