infra/k8s-manifests/05-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ahmedelbaz
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ahmedelbaz
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
