infra/k8s-manifests/15-redis-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: ahmedelbaz
  labels:
    app: redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: ahmedelbaz
  labels:
    app: redis
    role: master
spec:
  type: ClusterIP
  selector:
    statefulset.kubernetes.io/pod-name: redis-0
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
